<resources>
    <string name="app_name">Demo</string>

    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="search">Search</string>


    <string name="menu_settings">@string/settings</string>
    <string name="menu_search">@string/search</string>
    <string name="menu_language">@string/language</string>
    <string name="menu_refresh">Refresh</string>

    <string name="title_activity_detail">Movie Detail</string>
    <string name="title_activity_search">Search Result</string>

    <string name="search_hint">Search subtitles</string>
    <string name="movie_title">Movie title</string>
    <string name="action_settings">Settings</string>
    <string name="poster_image">Movie Poster</string>
    <string name="title">Title</string>
    <string name="sub_1">Subtitle 1</string>
    <string name="sub_2">Subtitle 2</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="pick_lan">Pick a language</string>
    <string name="empty_text_sub">No subtitle found.</string>
    <string name="loading">Loading...</string>
    <string name="delete">Delete</string>
    <string-array name="language_array">
        <item>Chinese (simplified)</item>
        <item>English</item>
    </string-array>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="imdb">IMDb</string>
    <string name="douban">Douban</string>
    <string name="colon">:</string>
    <string name="empty_local">No local subtitles found.</string>
    <string name="processing">Processing...</string>
    <string name="prev_sub">Previous subtitle</string>
    <string name="next_sub">Next subtitle</string>
</resources>
