<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tile_large">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/item_avatar"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/poster_image"
        android:src="@android:drawable/ic_menu_gallery" />

    <!--<TextView-->
        <!--android:id="@+id/secondary_text"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_toRightOf="@id/item_avatar"-->
        <!--android:ellipsize="marquee"-->
        <!--android:paddingBottom="20dp"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:singleLine="true"-->
        <!--android:text="Secondary Text"-->
        <!--android:textSize="14sp" />-->

    <TextView
        android:id="@+id/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/secondary_text"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/item_avatar"

        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingTop="14dp"
        android:text="Primary Text"
        android:textSize="16sp" />
    <LinearLayout
        android:id="@+id/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/item_avatar"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:orientation="horizontal"
        android:singleLine="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_imdb"
            android:contentDescription="@string/imdb" />
        <TextView
            android:id="@+id/imdb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="4dp"
            android:text="7.8/10"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_douban"
            android:contentDescription="@string/douban" />
        <TextView
            android:id="@+id/douban_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="6.3/10"/>
    </LinearLayout>


</RelativeLayout>