<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lochbridge.peike.demo.DetailActivity">

    <!--<FrameLayout-->
        <!--android:id="@+id/loadingPanel"-->
        <!--style="@style/GenericProgressBackground"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gon-->
        <!--android:layout_gravity="center">-->

        <!--<ProgressBar-->
            <!--style="@style/GenericProgressIndicator"-->
            <!--android:layout_gravity="center" />-->
    <!--</FrameLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/title_grad"
            android:padding="16dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:id="@+id/sub_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="@dimen/item_height"
            android:onClick="onLanguageClicked"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language"
                android:textSize="@dimen/font_normal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/language"
                android:src="@drawable/ic_language_black_24dp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frag_sub_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/sub_lan" />
    </RelativeLayout>

</LinearLayout>
